# online_cinema

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
commands/: run_migration.sh
src/: main.py
src/config/: __init__.py  dependencies.py  settings.py
src/crud/: __init__.py  accounts.py  movies.py
src/database/: __init__.py  populate.py  session_postgresql.py
src/database/migration/: env.py
src/database/migration/versions/: 6ce9e8db8f8c_initial_migration.py  b37cabdae04f_initial_migration.py  c426677bbc6f_temp_migration.py
src/database/models/: accounts.py
src/routes/: __init__.py  accounts.py  movies.py
src/schemas/: __init__.py  accounts.py  movies.py
src/security/: http.py
